2013-12-21  Mark Wielaard  <mjw@redhat.com>

	* frame_unwind.c (handle_cfi): Track whether the return register
	has been set and only allow it to be set once.

2013-12-20  Mark Wielaard  <mjw@redhat.com>

	* dwfl_frame.c (one_arg): New struct.
	(get_one_thread_cb): New function.
	(dwfl_getthread): Likewise.
	(one_thread): New struct.
	(get_one_thread_frames_cb): New function.
	(dwfl_getthread_frames): Likewise.
	* libdwfl.h (Dwfl_Thread_Callbacks): Add get_thread function.
	(dwfl_getthread_frames): Likewise.
	* libdwflP.h (dwfl_getthread_frames): New internal function declaration.
	* linux-core-attach.c (core_thread_callbacks): Initialize get_thread
	to NULL.
	* linux-pid-attach.c (pid_getthread): New function.
	(pid_thread_callbacks): Initialize get_thread to pid_getthread.

2013-12-20  Mark Wielaard  <mjw@redhat.com>

	* linux-kernel-modules.c (report_kernel_archive): Correct nested
	asprintf result check for debug.a.

2013-12-18  Mark Wielaard  <mjw@redhat.com>

	* derelocate.c (__libdwfl_find_section_ndx): New internal function.
	* dwfl_module_addrname.c (dwfl_module_addrname): Use
	dwfl_module_addrinfo.
	* dwfl_module_addrsym.c (dwfl_module_addrsym_elf): Replace with...
	(__libdwfl_addrsym): ...this. Use __libdwfl_getsym, use value
	for comparisons, not st_value. Fill in off. Search for both value
	and the (adjusted) sym.st_value when different.
	(dwfl_module_addrsym): Implement using __libdwfl_addrsym.
	(dwfl_module_addrinfo): New function.
	* dwfl_module_getsym.c (dwfl_module_getsym_elf): Replace with...
	(__libdwfl_getsym): ...this. Use ebl_resolve_sym_value if requested
	and possible. Adjust sym->st_value only when requested. Fill in addr
	if available.
	(dwfl_module_getsym_info): New function.
	(dwfl_module_getsym): Use __libdwfl_getsym.
	* libdwfl.h (dwfl_module_getsym_elf): Removed.
	(dwfl_module_getsym_info): New function declaration.
	(dwfl_module_addrinfo): Likewise.
	(dwfl_module_addrsym): Add documentation describing differences